# ViT-from-Scratch

./: .gitignore  README.md
ml-lab/: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
ml-lab/src/ml_lab/week1/: README.md
ml-lab/src/ml_lab/week1/activations/: __init__.py  activations.py
ml-lab/src/ml_lab/week2/attention/: attention.py
ml-lab/test/ml_lab/: conftest.py
ml-lab/test/ml_lab/week2/: test_attention.py
