[project]
name = "ml-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RyoTonegawa", email = "tonegawa622@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.0",
]

[project.scripts]
ml-lab = "ml_lab:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
